# foi_monitor

./: .dockerignore  .env-example  .gitignore  .gitmodules  Dockerfile  Dockerfile-with-chrome  Dockerfile.dev  MIGRATION_GUIDE.md  Pipfile  README.md  Vagrantfile  docker-compose.yml  manage.py  pipes-experient.py  process.py  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
.devcontainer/: devcontainer.json  initializeCommand  initializeCommand.ps1
conf/: config.py-example  packages  post_deploy_actions.bash
django_sourdough/: __init__.py
django_sourdough/models/: mixins.py
django_sourdough/views/: __init__.py
pi_monitor/: bake.py  base_views.py  model_mixins.py  models.py  populate.py  reprocess.py  scratch.py  urls.py  views.py
pi_monitor/adapters/: __init__.py  base.py  cabinetoffice.py  foisa.py
pi_monitor/migrations/: 0001_initial.py  0002_property_special.py  0003_auto_20201008_1228.py  0004_jurisdiction_desc.py  0005_authority_render_full.py
proj/: bake_settings.py  settings.py  universal.py  urls.py
resources/cabinetfoi/: authorities.csv  column_lookup.csv  description.md  foi-statistics-2020-published-data.csv  foi-statistics-q4-2019-and-annual-published-data2.csv  wdtk_public_bodies.csv  wdtk_year_count.csv
resources/foisa/: 2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  StatsSpreadsheet.xlsx  all time.csv  authorities.csv  column_lookup.csv  description.md  overlap.csv  wdtk_public_bodies.csv  wdtk_year_count.csv
resources/wdtk/: query.txt
script/: attach  bake  bootstrap  build  config.sh  console  logs  publish  server  setup  stop
scripts/: chrome_setup.bash  node_setup.bash  populate_if_missing.bash
static/css/: main.css
templates/: base.html
templates/charts/: altair_code.html  chart_render.html  div_code.html  div_code_table.html  html_table.html  set_code.html  table_code.html
templates/pi_monitor/: base.html  body.html  bodystat.html  footer.html  google_analytics.html  home.html  overview.html  property.html  top_nav.html  year.html
web/sass/: _datatables.scss  _header.scss  _minisites.scss  _mixins.scss  global.scss
