[tool.poetry]
name = "foi-monitor"
version = "0.1.0"
description = ""
authors = ["Alex Parsons <alex.parsons@mysociety.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Git dependencies
everypolitician-popolo = {git = "https://github.com/ajparsons/everypolitician-popolo-python.git", rev = "export_merge_function"}
useful-decorator = {git = "https://github.com/ajparsons/useful-decorator", rev = "6945b7017be19ebc2f5e243254bc65356e219d2f"}
django-pipeline-csscompressor = {git = "https://github.com/mysociety/django-pipeline-csscompressor"}
# PyPI dependencies
altair = "*"
altair-saver = "*"
dirsync = "*"
django-bootstrap-form = "*"
django-debug-toolbar = "*"
django-htmlmin = "*"
django-import-export = "*"
django-pipeline = "^3.0"
django = "^4.2"
fabric = "*"
markdown = "^3.0"
numpy = "*"
openpyxl = "*"
pillow = "*"
pylint-django = "*"
python-levenshtein = "*"
six = "^1.16"
unicodecsv = "*"
xlrd = "*"
xlwt = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # line too long, sorted with formatter where it can be
    "E501",
]


[tool.ruff.lint.isort]
known-first-party = ["hub"]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
django = ["django"]